{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 11,
  "lineage": "8b9bbf82-da2e-0f0b-2098-4e23a91d5b03",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0adb7876d1f03a8ac",
            "arn": "arn:aws:ec2:ap-southeast-2:433442197332:instance/i-0227c183c43690a56",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0227c183c43690a56",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d458f6efd0b902e0",
            "private_dns": "ip-10-0-10-184.ap-southeast-2.compute.internal",
            "private_ip": "10.0.10.184",
            "public_ip": "3.26.65.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0600ab643d1c34b21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070ab6cb790849392",
            "tags": {
              "Name": "test-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0043031157d406ab4"
            ]
          },
          "dependencies": [
            "aws_security_group.myapp-sg",
            "aws_subnet.myapp-subnet-1",
            "aws_vpc.myapp-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:433442197332:internet-gateway/igw-0c1d8e140b9ade0c7",
            "id": "igw-0c1d8e140b9ade0c7",
            "owner_id": "433442197332",
            "tags": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-027fc761dcf661acd"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03dc8df8c9edf4116",
            "owner_id": "433442197332",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1d8e140b9ade0c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-rtb"
            },
            "vpc_id": "vpc-027fc761dcf661acd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ee62b90ecbe8ea0",
            "route_table_id": "rtb-03dc8df8c9edf4116",
            "subnet_id": "subnet-070ab6cb790849392"
          },
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_route_table.myapp-rtb",
            "aws_subnet.myapp-subnet-1",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:433442197332:security-group/sg-0043031157d406ab4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0043031157d406ab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "49.199.65.218/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-sg",
            "name_prefix": null,
            "owner_id": "433442197332",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-027fc761dcf661acd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:433442197332:subnet/subnet-070ab6cb790849392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-070ab6cb790849392",
            "map_public_ip_on_launch": false,
            "owner_id": "433442197332",
            "tags": {
              "Name": "test-subnet-1"
            },
            "vpc_id": "vpc-027fc761dcf661acd"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:433442197332:vpc/vpc-027fc761dcf661acd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0968d9d8a3a5d0643",
            "default_route_table_id": "rtb-0f4b0014228e1af4a",
            "default_security_group_id": "sg-00a0344b82d72e061",
            "dhcp_options_id": "dopt-093f919b599b8ef11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-027fc761dcf661acd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f4b0014228e1af4a",
            "owner_id": "433442197332",
            "tags": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}